--- a/index.html
+++ b/index.html
@@ -13,29 +13,7 @@
     <!-- Open Modal -->
     <h1 id="show-modal">Add Bookmark</h1>
     <!-- Bookmarks -->
-    <div class="container" id="bookmarks-contaier">
-        <div class="item">
-            <i class="fa-solid fa-trash" id="delete-bookmarks" title="Delete Bookmarks"></i>
-            <div class="name">
-                <img src="bookmark_img.png" alt="Favicon">
-                <a href="#" target="blank">Icons8</a>
-            </div>
-        </div>
-        <div class="item">
-            <i class="fa-solid fa-trash" id="delete-bookmarks" title="Delete Bookmarks"></i>
-            <div class="name">
-                <img src="bookmark_img.png" alt="Favicon">
-                <a href="https://icons8.com/" target="_blank">Icons8</a>
-            </div>
-        </div>
-        <div class="item">
-            <i class="fa-solid fa-trash" id="delete-bookmarks" title="Delete Bookmarks"></i>
-            <div class="name">
-                <img src="bookmark_img.png" alt="Favicon">
-                <a href="https://icons8.com/" target="_blank">Icons8</a>
-            </div>
-        </div>
-    </div>
+    <div class="container" id="bookmarks-container"></div>
 
     <!-- Modal -->
     <div class="modal-container" id="modal">
